<resources>
    <string name="app_name">WhatsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="write_massage">Write Massage</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Do not have an account ?</string>
    <string name="register">REGISTER</string>
    <string name="may_i_ask_your_phone_number">May I ask your phone number?</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="send_code">Send Code</string>
    <string name="user_name">User Name</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="get_start">Get Start</string>
    <string name="we_just_need_your_registered_email_address_to_send_you_password_reset">We just need Your registered email address to send you password reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_here">Register Here...</string>
    <string name="username">username</string>
    <string name="hey_i_am_available_now">Hi,i am available now</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="accept">Accept</string>
    <string name="wait_for_the_code_i_sent_you">Wait for the code I sent You</string>
    <string name="sign_in">Sign In</string>
    <string name="findFriends">Find Friends</string>
    <string name="Empty">\"please write a massage first.... \"</string>
    <string name="please_enter_email">Please Enter Your Email..</string>
    <string name="please_enter_password">Please Enter Your Password..</string>
    <string name="Please_wait">Please Wait...</string>
    <string name="Logged_success">Logged In Successfully...</string>
    <string name="verviy_account_massage">Please Verify Your Account</string>
    <string name="please_enter_phone">Please Enter Phone Number...</string>
    <string name="code_sent_massage">Code has been Sent</string>
    <string name="create_account">Creating New Account</string>
    <string name="wait_create_account">Please Wait,while we are creating new account for you...</string>
    <string name="created_account">Account Created Successfully...</string>
    <string name="send_reset_email">Send Reset Email Successfully Please Check Your Email</string>
    <string name="send_reset_email_fail">Send Reset Email failure Please Check Your Email</string>
    <string name="setting_account_toolbar">Setting Account</string>
    <string name="profile_success">Profile Image Uploaded Successfully...</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_status">Please Enter Status</string>
    <string name="update_massage">Updated Successfully</string>
    <string name="verfiy">Verification Code</string>
    <string name="wait_verfiy">please wait, while we are verifying Verification Code...</string>
    <string name="congrat_massage">congratulations, you\'re logged in successfully...</string>
    <string name="cancel_request">Cancel Chat Request</string>
    <string name="accept_request">Accept Chat Request</string>
    <string name="remove_account">Remove this Friend</string>
    <string name="send_request">Send Request</string>
    <string name="cancel_msg">Canceled Successfully</string>
    <string name="whats_name">WhatsApp</string>
    <string name="change_language">Change Language</string>
    <string name="arabic">Changed Arabic</string>
    <string name="english">Changed English</string>
    <string name="create_group">Create Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="create">Create</string>
    <string name="please">Please Write Group Name...</string>
    <string name="cancel">Cancel</string>
    <string name="group_msg_success">\" Group is Created Successfully..\"</string>
    <string name="listener">\"Please implement ItemSelectedListenerListView interface \"</string>
    <string name="contact_success">New Friend Saved Successfully</string>
    <string name="contact_delete">Person Deleted Successfully</string>
    <string name="enter_msg">Please Enter Message First...</string>
    <string name="msg_fail">Send Message Failure</string>
    <string name="sendFile">Sending File</string>
    <string name="pleaseSendfile">Please wait,we are sending....</string>
    <string name="pdfMsg">PDF Uploaded Successfully....</string>
    <string name="search">search...</string>
    <string name="noti_title">Check Friends</string>
    <string name="noti_body">There are Some Friends Online Now</string>
    <string name="dMsg">Delete Message?</string>
    <string name="s">Search...</string>
    <string name="ff">Find Friends</string>
    <string name="cg">Create Group</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>