<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<item
    android:id="@+id/main_search_option"
    android:title="@string/s"
    app:showAsAction="always|collapseActionView"
    android:icon="@drawable/ic_baseline_search_24"
    app:actionViewClass="android.widget.SearchView" />

<item  android:id="@+id/main_find_friends_option" android:title="@string/ff" app:showAsAction="never"/>
<item android:id="@+id/main_create_group_option" android:title="@string/cg" app:showAsAction="never"/>
<item android:id="@+id/main_language_option" android:title="@string/language" app:showAsAction="never"/>
<item android:id="@+id/main_settings_option" android:title="@string/settings" app:showAsAction="never"/>
<item android:id="@+id/main_logout_option" android:title="@string/logout" app:showAsAction="never"/>
</menu>