<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/profile_activity"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/ic_profile"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_100sdp"
        android:id="@+id/circleProfileImage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/circleProfileImage"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/user_name"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:textColor="#101010"
            android:id="@+id/username"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/status"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/_17sdp"
        android:textColor="#685A5A"
        android:id="@+id/status"
        />
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/status"
    android:layout_marginTop="@dimen/_60sdp"
    android:layout_marginStart="@dimen/_30sdp"
    android:layout_marginEnd="@dimen/_30sdp"
    android:padding="@dimen/_2sdp"
    android:textSize="@dimen/_18ssp"
    android:textStyle="bold"
    android:textAllCaps="false"
    android:text="@string/send_request"
    android:textColor="@android:color/white"
    android:background="@drawable/buttons"
    android:id="@+id/btn_send_massage"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_send_massage"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:padding="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:visibility="invisible"
        android:text="@string/cancel_chat_request"
        android:textColor="@android:color/white"
        android:background="@drawable/buttons"
        android:id="@+id/btn_cancel_request"
        />

</RelativeLayout>