<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.LogInActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scroll"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:src="@drawable/login_photo"
                android:id="@+id/imgLogin"
                android:scaleType="center"/>
            <EditText
                android:inputType="textEmailAddress"
                android:textDirection="ltr"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:padding="@dimen/_10sdp"
                android:drawablePadding="@dimen/_8sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_below="@id/imgLogin"
                android:layout_marginEnd="@dimen/_10sdp"
                android:drawableLeft="@drawable/email"
                android:hint="@string/enter_email"
                android:layout_marginBottom="@dimen/_6sdp"
                android:textSize="@dimen/_17ssp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:id="@+id/signInEmail"/>
            <RelativeLayout
                android:id="@+id/RL"
                android:layout_below="@id/signInEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:padding="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:drawablePadding="@dimen/_8sdp"
                    android:textDirection="ltr"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/enter_password"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:textSize="@dimen/_17ssp"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:id="@+id/signInPassword"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_remove_red_eye_24"
                    android:layout_marginRight="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_19sdp"
                    android:id="@+id/showOrhidePasswordIn"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_height="wrap_content"
                android:layout_below="@id/RL"
                android:textAllCaps="false"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/forgot_password"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/_12ssp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:id="@+id/ForgotPass"/>
            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_below="@id/ForgotPass"
                android:id="@+id/MRL"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                style="@style/RippleStyleGrey"
                android:layout_height="wrap_content">
                <Button
                    android:gravity="center"
                    android:background="#094C0C"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18ssp"
                    android:textAllCaps="false"
                    android:text="@string/log_in"
                    android:id="@+id/signIn"/>
            </com.balysv.materialripple.MaterialRippleLayout>
            <TextView
                android:layout_below="@id/MRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textAllCaps="false"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/reg_massages"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_massages"
                android:textColor="#094C0C"
                android:textStyle="bold"
                android:textSize="@dimen/_16ssp"
                android:text="@string/register"
                android:gravity="center"
                android:id="@+id/goToreg"/>
        </RelativeLayout>
    </ScrollView>
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_centerHorizontal="true"
        android:id="@+id/LogInUsingPhone"
        android:layout_margin="@dimen/_10sdp"
        android:layout_below="@id/scroll"
        android:src="@drawable/ic_baseline_phone_iphone_24"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>