<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:src="@drawable/signup_photo"
                android:id="@+id/imgLogin"
                android:scaleType="centerCrop"/>
            <EditText
                android:inputType="textEmailAddress"
                android:textDirection="ltr"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:padding="@dimen/_10sdp"
                android:drawablePadding="@dimen/_8sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_below="@id/imgLogin"
                android:layout_marginEnd="@dimen/_10sdp"
                android:drawableLeft="@drawable/email"
                android:hint="@string/enter_email"
                android:layout_marginBottom="@dimen/_6sdp"
                android:textSize="@dimen/_17ssp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:id="@+id/signUpEmail"/>
            <RelativeLayout
                android:id="@+id/RL"
                android:layout_below="@id/signUpEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:textColor="@android:color/black"
                    android:padding="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_8sdp"
                    android:textDirection="ltr"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/enter_password"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:textSize="@dimen/_17ssp"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:id="@+id/signUpPassword"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_remove_red_eye_24"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_19sdp"
                    android:id="@+id/showOrhidePasswordUp"/>
            </RelativeLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_below="@id/RL"
                android:id="@+id/MRL"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                style="@style/RippleStyleGrey"
                android:layout_height="wrap_content">
                <Button
                    android:gravity="center"
                    android:background="#094C0C"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18ssp"
                    android:textAllCaps="false"
                    android:text="@string/get_start"
                    android:id="@+id/signUp"/>
            </com.balysv.materialripple.MaterialRippleLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_below="@id/MRL"
                android:textAllCaps="false"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:shadowDy="1"
                android:shadowColor="@android:color/white"
                android:id="@+id/reg_massages"
                android:shadowDx="1"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:shadowRadius="3"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>