<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/_2sdp"
    android:layout_height="wrap_content"
    android:textDirection="ltr"
    >

    <LinearLayout
            android:layoutDirection="ltr"
            android:textDirection="ltr"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layoutDirection="ltr"
                android:textDirection="ltr"
                android:id="@+id/userProfileImage"
                android:layout_width="@dimen/_65sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_height="@dimen/_73sdp"
                android:src="@drawable/ic_profile"
                />
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layoutDirection="ltr"
                        android:textDirection="ltr"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:id="@+id/userName"
                        android:textColor="#44484E"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:text="@string/name"
                        />
                    <ImageView
                        android:layoutDirection="ltr"
                        android:textDirection="ltr"
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:src="@drawable/online_status"
                        android:visibility="invisible"
                        android:id="@+id/userOnlineStatus"
                        />
                </LinearLayout>
                <TextView
                    android:layoutDirection="ltr"
                    android:textDirection="ltr"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/userStatus"
                    android:textColor="#403D3D"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:text="@string/status"
                    />
                <LinearLayout
                    android:layoutDirection="ltr"
                    android:textDirection="ltr"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:theme="@style/RippleStyleGrey">
                <Button
                    android:layoutDirection="ltr"
                    android:textDirection="ltr"
                    android:visibility="gone"
                    android:layout_width="@dimen/_87sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:text="@string/accept"
                    android:layout_weight="1"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:id="@+id/btn_accept"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />
                    </com.balysv.materialripple.MaterialRippleLayout>
                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:theme="@style/RippleStyleGrey">
                    <Button
                        android:layoutDirection="ltr"
                        android:textDirection="ltr"
                        android:visibility="gone"
                        android:layout_weight="1"
                        android:layout_width="@dimen/_87sdp"
                        android:layout_height="@dimen/_34sdp"
                        android:text="@string/cancel"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@android:color/white"
                        android:background="@android:color/holo_red_dark"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:id="@+id/btn_cancel"
                        />
                    </com.balysv.materialripple.MaterialRippleLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>